--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "proto:install": "npm i git+https://github.com/zoroplay/sbe-service-proto.git",
     "proto:noti": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/sbe-service-proto/proto --ts_proto_out=src/proto/ node_modules/sbe-service-proto/proto/noti.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb"
-
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.9.5",
@@ -28,16 +27,17 @@
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/microservices": "^10.2.6",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.2.8",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^3.0.4",
     "@nestjs/typeorm": "^10.0.0",
     "axios": "^1.5.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.1",
     "reflect-metadata": "^0.1.13",
-    "sbe-service-proto": "github:zoroplay/sbe-service-proto",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
