--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "proto:install": "npm i git+https://github.com/zoroplay/sbe-service-proto.git",
-    "proto:noti": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/sbe-service-proto/proto --ts_proto_out=src/proto/ node_modules/sbe-service-proto/proto/noti.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb"
+    "proto:noti": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto -I=./proto --ts_proto_out=src/ proto/noti.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
+    "migrate:generate": "npx prisma migrate dev --create-only",
+    "db:push": "npx prisma db push"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.9.5",
@@ -27,6 +29,7 @@
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.2.10",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.2.8",
     "@nestjs/platform-express": "^10.0.0",
@@ -62,6 +65,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
+    "ts-proto": "^1.165.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
