--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sbe-service-proto": "github:zoroplay/sbe-service-proto"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
