--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@grpc/grpc-js": "^1.9.5",
     "@grpc/proto-loader": "^0.7.10",
     "@nestjs/axios": "^3.0.0",
+    "@nestjs/cache-manager": "^2.2.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.10",
@@ -37,10 +38,13 @@
     "@nestjs/typeorm": "^10.0.0",
     "@prisma/client": "^5.6.0",
     "axios": "^1.5.1",
+    "cache-manager": "^5.4.0",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.1",
+    "redis": "^4.6.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
