--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "mysql2": "^3.6.1",
     "redis": "^4.6.12",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sbe-service-proto": "github:zoroplay/sbe-service-proto"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
