--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@nestjs/typeorm": "^10.0.0",
     "@prisma/client": "^5.6.0",
     "axios": "^1.5.1",
-    "cache-manager": "^5.4.0",
-    "cache-manager-redis-store": "^3.0.1",
+    "cache-manager": "^3.6.0",
+    "cache-manager-redis-store": "2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
@@ -53,6 +53,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
