--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "redis": "^4.6.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "sbe-service-proto": "github:zoroplay/sbe-service-proto"
+    "sbe-service-proto": "github:zoroplay/sbe-service-proto",
+    "smpp": "^0.6.0-rc.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
