--- a/.env
+++ b/.env
@@ -6,10 +6,17 @@
 
 ROBERMS_SMS_API="https://roberms.co.ke/sms/v1/roberms/send/simple/sms"
 ROBERMS_APIKEY="https://roberms.co.ke/sms/v1/roberms/send/simple/sms"
+
+MOMO_APIKEY="409af229-8f5h-6fbh-9f04-f876g4fdgfg4"
+MOMO_USER="6571e255-522b-9ba4-4ce8-3765f9fd8cbf"
+MOMO_NAME="Arnos_G"
+
+
 MTECH_CLIENT_KEY="qrbw4fHvAo6be4QG"
 MTECH_CLIENT_USERNAME="sportbook"
 NANOBOX_SYSTEMID="2A48BC22A"
-DATABASE_URL="postgresql://postgres:pass@zoro@localhost:5431/notification-service?schema=public"
+# DATABASE_URL="postgresql://postgres:pass@zoro@localhost:5431/notification-service?schema=public"
+DATABASE_URL= postgresql://postgres:1234@localhost:5432/notification-service?schema=public
 
 # DATABASE_URL="postgresql://doadmin:AVNS_AqxHYW9MtvMMgDAZ8TS@sbe-db-postgresql-nyc3-95492-do-user-12203797-0.c.db.ondigitalocean.com:25060/notification-service?schema=public"
 
