--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 ROBERMS_SMS_API="https://roberms.co.ke/sms/v1/roberms/send/simple/sms"
-ROBERMS_APIKEY="https://roberms.co.ke/sms/v1/roberms/send/simple/sms"
+ROBERMS_APIKEY="6930ec35dfff8273ec2516e85d3b6a25f0e3d635"
 
 MOMO_APIKEY="409af229-8f5h-6fbh-9f04-f876g4fdgfg4"
 MOMO_USER="6571e255-522b-9ba4-4ce8-3765f9fd8cbf"
