--- a/.env
+++ b/.env
@@ -7,10 +7,19 @@
 ROBERMS_SMS_API="https://roberms.co.ke/sms/v1/roberms/send/simple/sms"
 ROBERMS_APIKEY="https://roberms.co.ke/sms/v1/roberms/send/simple/sms"
 
-MOMO_APIKEY="409af229-8f5h-6fbh-9f04-f876g4fdgfg4"
-MOMO_USER="6571e255-522b-9ba4-4ce8-3765f9fd8cbf"
+# MOMO_APIKEY="409af229-8f5h-6fbh-9f04-f876g4fdgfg4"
+# MOMO_USER="6571e255-522b-9ba4-4ce8-3765f9fd8cbf"
+# MOMO_NAME="Arnos_G"
+# MOMO_API="https://sms-momo-gateway-arnos.mojabet.co.tz"
+
+
+MOMO_APIKEY="508ad228-8f3f-4fbf-8500-9876f4fd9864"
+MOMO_USER="2470e252-692a-4ba0-9ce9-573579fd9cbf"
 MOMO_NAME="Arnos_G"
-MOMO_API="https://sms-momo-gateway-arnos.mojabet.co.tz"
+MOMO_API="https://test.cashier.moobitek.com"
+
+apikey=508ad228-8f3f-4fbf-8500-9876f4fd9864
+apiUserName=2470e252-692a-4ba0-9ce9-573579fd9cbf
 
 
 MTECH_CLIENT_KEY="qrbw4fHvAo6be4QG"
@@ -28,3 +37,6 @@ GRPC_PORT=5006
 
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
+
+
+# DATABASE_URL= postgresql://postgres:1024@localhost:5002/notification-service?schema=public
