--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ ROBERMS_APIKEY="https://roberms.co.ke/sms/v1/roberms/send/simple/sms"
 
 # MOMO_APIKEY="409af229-8f5h-6fbh-9f04-f876g4fdgfg4"
 # MOMO_USER="6571e255-522b-9ba4-4ce8-3765f9fd8cbf"
-# MOMO_NAME="Arnos_G"
+# MOMO_NAME="Mojabet"
 # MOMO_API="https://sms-momo-gateway-arnos.mojabet.co.tz"
 
 
