chore: bump version to trigger empty release

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ get_new_version:
 
 
 
-# ------------------- Build Stage --------------------
+# ------------------- Build Stage ---------------------
 build-application:
   stage: build
   dependencies:
