--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,9 @@ services:
     image: ghcr.io/zoroplay/notification-service:latest
     container_name: notification-service
     ports:
-      - "5000:5000"
-    environment:
-      - DATABASE_URL=postgresql://postgres:PostgresPass123!@34.35.31.134:5432/notification-service?schema=public
-      - SYSTEM_PORT=5000
-      - SYSTEM_HOST=0.0.0.0
-      - DEBUG=1
-      - GRPC_PORT=5000
-      - GRPC_HOST=0.0.0.0
-      - REDIS_HOST=redis.sbe-platform-staging.svc.cluster.local
-      - REDIS_PORT=6379
-      - RABBITMQ_URI=amqp://gaming:sbegaming@rabbitmq.sbe-platform-staging.svc.cluster.local:5672
+      - "59013:5000"
+    env_file:
+      - .env
     deploy:
       resources:
         limits:
