fix;deploying to staging

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -206,32 +206,32 @@ jobs:
       - name: Deploy to STAGING server
         run: |
           # Create directory on server
-          ssh -o StrictHostKeyChecking=no ${{ secrets.STAGING_SERVER_USER }}@${{ secrets.STAGING_SERVER_IP }} 'mkdir -p ~/identity-service/'
+          ssh -o StrictHostKeyChecking=no ${{ secrets.STAGING_SERVER_USER }}@${{ secrets.STAGING_SERVER_IP }} 'mkdir -p ~/notification-service/'
           
           # Copy files to server
-          scp -o StrictHostKeyChecking=no .env ${{ secrets.STAGING_SERVER_USER }}@${{ secrets.STAGING_SERVER_IP }}:~/identity-service/
-          scp -o StrictHostKeyChecking=no docker-compose.yml ${{ secrets.STAGING_SERVER_USER }}@${{ secrets.STAGING_SERVER_IP }}:~/identity-service/
-          scp -o StrictHostKeyChecking=no deploy.sh ${{ secrets.STAGING_SERVER_USER }}@${{ secrets.STAGING_SERVER_IP }}:~/identity-service/
+          scp -o StrictHostKeyChecking=no .env ${{ secrets.STAGING_SERVER_USER }}@${{ secrets.STAGING_SERVER_IP }}:~/notification-service/
+          scp -o StrictHostKeyChecking=no docker-compose.yml ${{ secrets.STAGING_SERVER_USER }}@${{ secrets.STAGING_SERVER_IP }}:~/notification-service/
+          scp -o StrictHostKeyChecking=no deploy.sh ${{ secrets.STAGING_SERVER_USER }}@${{ secrets.STAGING_SERVER_IP }}:~/notification-service/
           
           # Login to GitHub Container Registry on server and execute deployment
           ssh -o StrictHostKeyChecking=no ${{ secrets.STAGING_SERVER_USER }}@${{ secrets.STAGING_SERVER_IP }} '
             echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-            chmod +x ~/identity-service/deploy.sh
-            bash ~/identity-service/deploy.sh
+            chmod +x ~/notification-service/deploy.sh
+            bash ~/notification-service/deploy.sh
           '
 
       - name: Reset failed migrations
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.STAGING_SERVER_USER }}@${{ secrets.STAGING_SERVER_IP }} '
-            cd ~/identity-service
-            docker compose run --rm identity-service npx prisma migrate resolve --applied 20250916235259_add_user_log || true
+            cd ~/notification-service
+            docker compose run --rm notification-service npx prisma migrate resolve --applied 20250916235259_add_user_log || true
           '
 
       - name: Run migrations
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.STAGING_SERVER_USER }}@${{ secrets.STAGING_SERVER_IP }} '
-            cd ~/identity-service
-            docker compose run --rm identity-service yarn migration:run
+            cd ~/notification-service
+            docker compose run --rm notification-service yarn migration:run
           '
 
   deploy-production:
