--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "proto:install": "yarn add git+https://oauth2:glpat-33an5NfJQm9UEmX0FCqscW86MQp1Omc0ZHhhCw.01.1218fj9q7@gitlab.com/sbe-developers/sbe-service-proto.git#main",
+    "proto:install": "yarn add git+https://github.com/zoroplay/sbe-service-proto.git#main",
     "proto:noti": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/sbe-service-proto/proto --ts_proto_out=src/proto/ node_modules/sbe-service-proto/proto/noti.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
     "migrate:generate": "npx prisma migrate dev --create-only",
     "db:push": "npx prisma db push"
@@ -47,7 +47,7 @@
     "redis": "^4.6.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "sbe-service-proto": "https://oauth2:glpat-33an5NfJQm9UEmX0FCqscW86MQp1Omc0ZHhhCw.01.1218fj9q7@gitlab.com/sbe-developers/sbe-service-proto.git",
+    "sbe-service-proto": "https://github.com/zoroplay/sbe-service-proto.git#main",
     "smpp": "^0.6.0-rc.4"
   },
   "devDependencies": {
