--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "9013:5000"
     env_file:
       - .env
+    restart: unless-stopped
     deploy:
       resources:
         limits:
