--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     env_file:
       - .env
     restart: unless-stopped
+    networks:
+      - sbenet
     deploy:
       resources:
         limits:
@@ -15,3 +17,7 @@ services:
         reservations:
           cpus: '0.25'
           memory: 256M
+
+networks:
+  sbenet:
+    driver: bridge
