fix: use container hostnames for Redis and RabbitMQ connections

--- a/.env.staging
+++ b/.env.staging
@@ -4,6 +4,6 @@ SYSTEM_HOST="0.0.0.0"
 DEBUG="1"
 GRPC_PORT="5000"
 GRPC_HOST="0.0.0.0"
-REDIS_HOST="localhost"
+REDIS_HOST="redis"
 REDIS_PORT="6379"
-RABBITMQ_URI="amqp://gaming:sbegaming@localhost:5672"
+RABBITMQ_URI="amqp://gaming:sbegaming@rabbitmq:5672"
