--- a/.env.staging
+++ b/.env.staging
@@ -6,4 +6,5 @@ GRPC_PORT="5000"
 GRPC_HOST="0.0.0.0"
 REDIS_HOST="redis"
 REDIS_PORT="6379"
+REDIS_PASSWORD="Zoroplay@123#"
 RABBITMQ_URI="amqp://gaming:sbegaming@rabbitmq:5672"
